--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
-	<head>
-		<script src="./bundle.js"></script>
-	</head>
+<head>
 	
-	<body>
-		<div id="root"></div>
-	</body>
+</head>
+<body>
+	<div id="root"></div>
+	<script src="./app/global-bundle.js"></script>
+</body>
+
 </html>
